# collab_engine

./: .gitmodules  CMakeLists.txt
include/collab_engine/: collab_engine.hpp
src/: collab_engine.cpp
